--- a/240318_helloidol/helloidol.html
+++ b/240318_helloidol/helloidol.html
@@ -2,35 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>helloidol</title>
     <link rel="stylesheet" href="css/my_style.css">
-    <title>hello idol</title>
 </head>
 <body>
+    <h1>왕현주</h1>
+    <h2>오지은</h2>
+    <h3>김서연</h3>
+    <h4>이서윤</h4>
+    <h5>김예나</h5>
+    <h6>이진현</h6>
+    <h6>이진현</h6>
+    <h5>김예나</h5>
+    <h4>이서윤</h4>
+    <h3>김서연</h3>
+    <h2>오지은</h2>
+    <h1>왕현주</h1>
+    <ul>
+        <li>이</li>
+        <li>서</li>
+        <li>윤</li>
+        <ul>
+            <li>윤</li>
+            <li>성</li>
+            <li>웅</li>
+            <ol>
+                <li>융</li>
+                <li>덩</li>
+                <li>이</li>
+            </ol>
+        </ul>
+    </ul>
     <h1>아이브</h1>
     <ul>
         <li>유진</li>
-        <li>레이</li>
-        <li>가을</li>
         <li>원영</li>
+        <li>가을</li>
+        <li>레이</li>
         <li>리즈</li>
         <li>이서</li>
     </ul>
-<img src="https://i.ytimg.com/vi/q0n9SiygI34/maxresdefault.jpg" alt="귀여운 이서" width="400">
+    
+    <img src="https://img.hankyung.com/photo/202303/01.33048504.1.jpg" alt="사이가 좋아보이는 아이브" width="400px">
 
-
-<h1>라이즈</h1>
+    <h1>라이즈</h1>
     <ul>
         <li>성찬</li>
-        <li>은석</li>
-        <li>앤톤</li>
-        <li>원빈</li>
-        <li>소희</li>
         <li>쇼타로</li>
-
+        <li>원빈</li>
+        <li>앤톤</li>
+        <li>은석</li>
+        <li>소희</li>
     </ul>
 
-    <img src="https://image.newsis.com/2023/11/24/NISI20231124_0001420928_web.jpg" alt="라이즈 톡섹시 커버사진" width="400">
-
+    <img src="https://img3.yna.co.kr/etc/inner/KR/2023/08/22/AKR20230822056900005_01_i_P2.jpg" alt="라이즈 데뷔" width="400px">
 </body>
 </html>
