--- a/240318_helloidol/helloidol.html
+++ b/240318_helloidol/helloidol.html
@@ -35,12 +35,12 @@
     </ul>
     <h1>아이브</h1>
     <ul>
-        <li>유진</li>
-        <li>원영</li>
-        <li>가을</li>
-        <li>레이</li>
-        <li>리즈</li>
-        <li>이서</li>
+        <li id="leader" class="korea">유진</li>
+        <li class="korea taiwan" style="background-color:darkseagreen;">원영</li>
+        <li class="korea incheon">가을</li>
+        <li class="japan">레이</li>
+        <li class="korea">리즈</li>
+        <li class="korea">이서</li>
     </ul>
     
     <img src="https://img.hankyung.com/photo/202303/01.33048504.1.jpg" alt="사이가 좋아보이는 아이브" width="400px">
@@ -56,5 +56,21 @@
     </ul>
 
     <img src="https://img3.yna.co.kr/etc/inner/KR/2023/08/22/AKR20230822056900005_01_i_P2.jpg" alt="라이즈 데뷔" width="400px">
+
+    <form action="">
+        <input type="text" name="txt" placeholder="아이디를 입력해주세욥">
+        <input type="password" name="pw" id="">
+        <input type="button" value="버튼">
+        <input type="submit" value="서브밑">
+        <input type="checkbox" name="cd" id="탕"><label for="탕" id="">탕후루</label> 
+        <input type="checkbox" name="cd" id="마라"><label for="마라" id="">마라탕</label>
+        <input type="checkbox" name="cd" id="면"> <label for="면" id="">자장면</label>
+        <input type="checkbox" name="cd" id="짬"><label for="짬" id="">짬뽕</label>
+        <input type="radio" name="rd" id="박"> <label for="박">박성래</label>
+        <input type="radio" name="rd" id="고"><label for="고">고낙은</label>
+        <input type="radio" name="rd" id="우"><label for="우">우호식</label>
+        <!-- 체크박스는 중복 선택 가능 라디오는 중복 선택 불가능 -->
+
+    </form>
 </body>
 </html>
