--- a/240513_nav/nav.html
+++ b/240513_nav/nav.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/nav.css">
+
 </head>
 <body>
     <header>
         <nav class="nav container">
             <!-- 로고 -->
-            <a href="/">로고</a>
+            <a href="/"> <i class="bi bi-bank2"></i></a>
+               
             <!-- 학교,매점,기숙사 -->
            <ul class="nav-list">
             <li class="nav-item"><a href="nav-link">학교</a></li>
@@ -20,10 +24,10 @@
 
             <!-- 햄버거 메뉴 or 닫기버튼 -->
             <div class="nav-toggle" id="nav-toggle">
-                햄버거메뉴 or 닫기 버튼
+                <i class="bi bi-list"></i>
             </div>
         </nav>
     </header>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbXAdjkbKiLojFl78Dt1I4y3DPwh1oYCfJVnihJw1o0w&s" alt="">
+    <script src = "js/nav.js"></script>
 </body>
 </html>
