--- a/240513_nav/index.html
+++ b/240513_nav/index.html
@@ -13,30 +13,30 @@
     <header>
         <nav class="nav container">
             <!-- 로고 -->
-            <a href="/"> <i class="bi bi-bank2"></i></a>
-               
+            <div class="nav-logo">
+                <a href="#"><i class="bi bi-bank2"></i></a>
+            </div>
             <!-- 학교,매점,기숙사 -->
            <ul class="nav-list">
-            <li class="nav-item"><a href="nav-link">학교</a></li>
-            <li class="nav-item"><a href="nav-link">매점</a></li>
-            <li class="nav-item"><a href="nav-link">기숙사</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">학교</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">매점</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">기숙사</a></li>
            </ul>
 
             <!-- 햄버거 메뉴 or 닫기버튼 -->
-            <div class="nav-toggle" i
-            d="nav-toggle">
+            <div class="nav-toggle" id="nav-toggle">
                 <i class="bi bi-list"></i>
             </div>
         </nav>
     </header>
     <main id="school-food" class="container">
         <section class="button-container">
-            <button class="btn prev-date">
+            <button class="btn prev-date" onclick="changeDate(-1)">
                 <i class="bi bi-chevron-compact-left"></i>
-               
+
             </button>
-            <header class="sxhool-food-title">🍚화요일의 메뉴🍚</header>
-            <button class="btn next-date">
+            <header class="school-food-title">🍚화요일의 메뉴🍚</header>
+            <button class="btn next-date" onclick="changeDate(1)">
                 <i class="bi bi-chevron-compact-right"></i>
             </button>
         </section>
@@ -74,5 +74,6 @@
         </section>
     </main>
     <script src = "js/nav.js"></script>
+    <script src="js/school-food.js"></script>
 </body>
 </html>
