html sxhool-market,css school-market

--- a/240513_nav/index.html
+++ b/240513_nav/index.html
@@ -18,9 +18,9 @@
             </div>
             <!-- 학교,매점,기숙사 -->
            <ul class="nav-list">
-            <li class="nav-item"><a href="#" class="nav-link">학교</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">매점</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">기숙사</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">급식</a></li>
+            <li class="nav-item"><a href="school-market.html" class="nav-link">매점</a></li>
+            <li class="nav-item"><a href="dormitory.html" class="nav-link">기숙사</a></li>
            </ul>
 
             <!-- 햄버거 메뉴 or 닫기버튼 -->
@@ -53,7 +53,7 @@
             </article>
             <article class="school-food-menu">
                 <h2 class="title">중식</h2>
-                <ul class="menu breakfast">
+                <ul class="menu lunch">
                     <li class="menu-food">흰쌀밥</li>
                     <li class="menu-food">육개장</li>
                     <li class="menu-food">오리주물럭</li>
@@ -63,7 +63,7 @@
             </article>
             <article class="school-food-menu">
                 <h2 class="title">석식</h2>
-                <ul class="menu breakfast">
+                <ul class="menu dinner">
                     <li class="menu-food">흰쌀밥</li>
                     <li class="menu-food">육개장</li>
                     <li class="menu-food">오리주물럭</li>
@@ -75,5 +75,6 @@
     </main>
     <script src = "js/nav.js"></script>
     <script src="js/school-food.js"></script>
+    
 </body>
 </html>
