--- a/240513_nav/school-market.html
+++ b/240513_nav/school-market.html
@@ -35,7 +35,22 @@
         <i class="bi bi-search"></i>
       </section>
       <section class="product-container">
-
+            <article class="product-item">
+                <img src="images/요맘때.jpg" alt="">
+                <div class="name">요맘때</div>
+            </article>
+            <article class="product-item">
+                <img src="images/무뚝뚝.webp" alt="">
+                <div class="name">무뚝뚝</div>
+            </article>
+            <article class="product-item">
+                <img src="images/몽쉘.webp" alt="">
+                <div class="name">몽쉘</div>
+            </article>
+            <article class="product-item">
+                <img src="images/더블치즈후레쉬팡.png" alt="">
+                <div class="name">더블치즈후레쉬팡</div>
+            </article>
       </section>
     </main>
     <script src = "js/nav.js"></script>
