--- a/240513_nav/school-market.html
+++ b/240513_nav/school-market.html
@@ -54,6 +54,7 @@
       </section>
     </main>
     <script src = "js/nav.js"></script>
-    <script src="js/school-food.js"></script>
+   
+    <script src="js/school-market.js"></script>
 </body>
 </html>
