--- a/240513_nav/school-market.html
+++ b/240513_nav/school-market.html
@@ -31,7 +31,7 @@
     </header>   
     <main id="school-market" class="container">
       <section class="search-container">
-        <input type="text" name="query" id="search-bar">
+        <input type="text" name="query" id="search-bar" oninput="searchData(this.value)" placeholder="이름 , 종류별로 검색하세요.">
         <i class="bi bi-search"></i>
       </section>
       <section class="product-container">
