--- a/240513_nav/school-market.html
+++ b/240513_nav/school-market.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/school-market.css">
+    <link rel="icon" type="images/png" href="images/icon.png">
 </head>
 <body>
     <header>
