CSS grid 연습 calendar css

--- a/240829_grid 연습/calendar.html
+++ b/240829_grid 연습/calendar.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calendar🗓️</title>
+    <link rel="stylesheet" href="calendar.css">
 </head>
 <body>
     <main id="calendar">
-        <div id="calendar-hearder">
+        <div id="calendar-header">
             <button id="prev-month">이전</button>
             <h1>2024년 9월</h1>
             <button id="next-month">다음</button>
