--- a/240829_grid 연습/calendar.html
+++ b/240829_grid 연습/calendar.html
@@ -13,7 +13,7 @@
             <h1></h1>
             <button id="next-month">다음</button>
         </div>
-        <div id="calendar-container">
+        <div id="calendar-container">>
         </div>
     </main>
     <script src="calendar.js"></script>
