기숙사 요일 지정 css

--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -30,7 +30,22 @@
             </div>
         </nav>
     </header>   
-    <main id="calendar">
+    <main id="dormitory">
+        <h1>세탁기 예약하기</h1>
+        <div id="selection-container">
+            <div class="selection-item">요일 지정</div>
+        <div class="selection-item">시간 선택</div>
+        <div class="selection-item">호실 이름</div>
+    </div>
+    <div id="selection-washingmachine-time">
+        <!--시간 선택  -->
+    </div>
+    
+    <div id="selection-room-name">
+        <!-- 호실 이름 -->
+    </div>
+    
+    <div id="calendar">
         <div id="calendar-header">
             <button id="prev-month">이전</button>
             <h1></h1>
@@ -38,9 +53,10 @@
         </div>
         <div id="calendar-container">>
         </div>
-    </main>
-
-    <script src = "js/nav.js"></script>
-    <script src="js/dormitory.js"></script>
+    </div>
+  
+</main>
+<script src = "js/nav.js"></script>
+<script src="js/dormitory.js"></script>
 </body>
 </html>
