기숙사 시간 선택 css

--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -39,6 +39,23 @@
     </div>
     <div id="selection-washingmachine-time">
         <!--시간 선택  -->
+            <select name="washingmachine" id="washingmachine">
+                <option value="">1번 세탁기</option>
+                <option value="">2번 세탁기</option>
+                <option value="">3번 세탁기</option>
+            </select>
+        <div class="flex-container">
+            <div class="selection-washingmachine">
+                <div class="selection-time">
+                    <select name="time" id="time">
+                        <option value="1">7시 ~ 8시 10분</option>
+                        <option value="2">8시 10분 ~ 9시 20분</option>
+                        <option value="3">9시 20분 ~ 10시 30분</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <button class="btn">다음</button>
     </div>
     
     <div id="selection-room-name">
