기숙사 요일지정,시간선택,세탁기예약현황표 페이지로 이동

--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -51,10 +51,8 @@
                 <button id="next-month">다음</button>
             </div>
             <div id="calendar-container">
-                
             </div>
         </div>
-
         <div id="selection-washingmachine-time">
             <!--시간선택-->
             <div class="flex-container">
@@ -170,6 +168,7 @@
     </main>
     
     <script src="js/nav.js"></script>
+    <script src="js/calendar.js"></script>
     <script src="js/dormitory.js"></script>
 </body>
 </html>
