--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -63,31 +63,22 @@
                 </div>
                 <div class="selection-time">
                     <!--select#time>option*3-->
-                    <select name="" id="time">
+                    <select name="time" id="time">
 
                     </select>
 
                 </div>
             </div>
-            <button class="btn">다음</button>
+            <button class="btn" onclick="setPage(3)">다음</button>
 
-        </div>
+        </div>  
 
         <div id="selection-room-name">
             <!--호실이름-->
             <div class="flex-container">
                 <div class="selection-room">
                     <select name="room" id="room">
-                        <option value="401">401호</option>
-                        <option value="402">402호</option>
-                        <option value="403">403호</option>
-                        <option value="404">404호</option>
-                        <option value="405">405호</option>
-                        <option value="501">501호</option>
-                        <option value="502">502호</option>
-                        <option value="503">503호</option>
-                        <option value="504">504호</option>
-                        <option value="505">505호</option>  
+                       
                     </select>
                 </div>
                 <div class="input-name">
