--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -87,69 +87,13 @@
 
                 </div>
             </div>
-            <button class="btn">다음</button>
+            <button class="btn" onclick="setPage(4)">다음</button>
         </div>
 
         <div id="board">
             <!-- 세탁기 예약 현황표 -->
             <div class="board-container">
-                <div class="item board-item header">이름</div>
-                <div class="item board-item header">호실</div>
-                <div class="item board-item header">날짜</div>
-                <div class="item board-item header">시간</div>
-                <div class="item board-item header">세탁기</div>
-                <div class="item board-item header">알림</div>
-                <div class="item board-item">김서연</div>
-                <div class="item board-item">501호</div>
-                <div class="item board-item">11/7(목)</div>
-                <div class="item board-item">9시 20분 ~ 10시 30분</div>
-                <div class="item board-item">3번 세탁기</div>
-                <div class="item board-item">🔔</div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
-                <div class="item board-item"></div>
+                
             </div>
             <button class="btn">예약완료</button>
         </div>
