기숙사reservations 원래 백엔드에 해야하는데 localstorage에저장

--- a/240513_nav/dormitory.html
+++ b/240513_nav/dormitory.html
@@ -93,9 +93,9 @@
         <div id="board">
             <!-- 세탁기 예약 현황표 -->
             <div class="board-container">
-                
+
             </div>
-            <button class="btn">예약완료</button>
+            <button class="btn" onclick="saveReservations()">예약완료</button>
         </div>
     </main>
     
